Started implementing back again the jwt-based authentication and authorization using SpringSecurity