@@ -10,11 +10,11 @@ import org.springframework.security.authentication.dao.DaoAuthenticationProvider
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.CsrfConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -25,7 +25,6 @@ import java.util.List;
 import static com.example.ticketbookingsystem.entity.Role.ADMIN;
 import static com.example.ticketbookingsystem.entity.Role.USER;
 import static org.springframework.security.config.Customizer.withDefaults;
-
 
 /**
  * Security configuration class for the Ticket Booking System application.
@@ -38,14 +37,24 @@ import static org.springframework.security.config.Customizer.withDefaults;
 public class SecurityConfiguration {
 
     private static final String[] AUTH_WHITELIST = {
-            "/login",
-            "/registration",
-            "/refresh",
+            "/api/v1/login",
+            "/api/v1/registration",
+            "/api/v1/refresh",
             "/v3/api-docs/**",
             "/swagger-ui/**",
             "/swagger-ui.html",
             "/actuator/**"
     };
+
+    private static final List<String> ALLOWED_METHODS = List.of("GET", "POST", "PUT", "DELETE", "OPTIONS");
+
+    private static final String CSRF_TOKEN_HEADER = "X-XSRF-TOKEN";
+
+    private static final List<String> ALLOWED_HEADERS = List.of(
+            "Authorization",
+            "Cache-Control",
+            "Content-Type",
+            CSRF_TOKEN_HEADER);
 
     private static final String ADMIN_ROLE_PATH = "/api/v1/admin/**";
 
@@ -55,11 +64,11 @@ public class SecurityConfiguration {
 
     private static final String CORS_ALLOWED_ORIGIN = "http://localhost:4200";
 
-//    private final UserDetailsServiceImpl userDetailsService;
-//
-//    private final AuthenticationFilter authenticationFilter;
-//
-//    private final AuthEntryPoint exceptionHandler;
+    private final UserDetailsServiceImpl userDetailsService;
+
+    private final AuthenticationFilter authenticationFilter;
+
+    private final AuthEntryPoint exceptionHandler;
 
     /**
      * Configures the global authentication manager.
@@ -67,12 +76,12 @@ public class SecurityConfiguration {
      * @param auth the authentication manager builder.
      * @throws Exception if an error occurs during configuration.
      */
-//    @Autowired
-//    public void configureGlobal(AuthenticationManagerBuilder auth)
-//            throws Exception  {
-//        auth.userDetailsService(userDetailsService)
-//                .passwordEncoder(new BCryptPasswordEncoder());
-//    }
+    @Autowired
+    public void configureGlobal(AuthenticationManagerBuilder auth)
+            throws Exception  {
+        auth.userDetailsService(userDetailsService)
+                .passwordEncoder(new BCryptPasswordEncoder());
+    }
 
     /**
      * Configures the authentication manager.
@@ -80,14 +89,14 @@ public class SecurityConfiguration {
      * @param userDetailsService the user details service.
      * @return the authentication manager.
      */
-//    @Bean
-//    public AuthenticationManager authenticationManager(UserDetailsServiceImpl userDetailsService) {
-//        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
-//        authenticationProvider.setUserDetailsService(userDetailsService);
-//        authenticationProvider.setPasswordEncoder(new BCryptPasswordEncoder());
-//
-//        return new ProviderManager(authenticationProvider);
-//    }
+    @Bean
+    public AuthenticationManager authenticationManager(UserDetailsServiceImpl userDetailsService) {
+        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
+        authenticationProvider.setUserDetailsService(userDetailsService);
+        authenticationProvider.setPasswordEncoder(new BCryptPasswordEncoder());
+
+        return new ProviderManager(authenticationProvider);
+    }
 
     /**
      * Configures CORS settings for supposed origin server, where client's part may be hosted.
@@ -96,14 +105,14 @@ public class SecurityConfiguration {
      */
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(Collections.singletonList(CORS_ALLOWED_ORIGIN));
-        config.setAllowedMethods(List.of("*"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(false);
-        config.applyPermitDefaultValues();
+        config.setAllowedMethods(ALLOWED_METHODS);
+        config.setAllowedHeaders(ALLOWED_HEADERS);
+        config.setExposedHeaders(Collections.singletonList(CSRF_TOKEN_HEADER));
+        config.setAllowCredentials(true);
 
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
@@ -118,30 +127,24 @@ public class SecurityConfiguration {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
-//        http.csrf(CsrfConfigurer:: disable)
-//                .sessionManagement((session) -> session
-//                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-//                )
-//                .authorizeHttpRequests(auth -> auth
-//                        .requestMatchers(AUTH_WHITELIST).permitAll()
-//                        .requestMatchers(request -> request.getParameter("lang") != null).permitAll()
-//                        .requestMatchers(ADMIN_ROLE_PATH).hasRole(ADMIN.getAuthority())
-//                        .requestMatchers(USER_CART_PATH,
-//                                PURCHASES_PATH).hasRole(USER.getAuthority())
-//                        .anyRequest().authenticated()
-//                )
-//                .exceptionHandling((ex) -> ex
-//                        .authenticationEntryPoint(exceptionHandler)
-//                ).addFilterBefore(authenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
-        http.csrf(CsrfConfigurer::disable)
-                .cors(withDefaults())
-                .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll()
+        http.csrf((csrf) -> csrf
+                        .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
                 )
+                .cors(withDefaults())
                 .sessionManagement((session) -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                );
+                )
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(AUTH_WHITELIST).permitAll()
+                        .requestMatchers(request -> request.getParameter("lang") != null).permitAll()
+                        .requestMatchers(ADMIN_ROLE_PATH).hasRole(ADMIN.getAuthority())
+                        .requestMatchers(USER_CART_PATH,
+                                PURCHASES_PATH).hasRole(USER.getAuthority())
+                        .anyRequest().authenticated()
+                )
+                .exceptionHandling((ex) -> ex
+                        .authenticationEntryPoint(exceptionHandler)
+                ).addFilterBefore(authenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
